# app-relayer

./: .gitignore  .gitmodules  README.md  flake.nix  foundry.toml  justfile
crates/relayer/: Cargo.toml  conventions.md
crates/relayer/src/: app.rs  config.rs  event_delivery.rs  event_generator.rs  lib.rs  main.rs  proof_fetcher.rs  types.rs
crates/relayer/src/proof_fetcher/: client.rs  mod.rs
scripts/: BatchedStateSync.t.sol
src/: BatchedStateSync.sol  CrossChainExecutor.sol  IResolver.sol  StateSyncV2.sol
test/: BatchedStateSync.t.sol  CrossChainExecutor.t.sol
ts-relayer/: Dockerfile  package.json  tsconfig.json
ts-relayer/config/: config.dev.yaml  config.testnet.yaml
ts-relayer/src/: app.ts  index.ts  types.ts
ts-relayer/src/config/: index.ts  types.ts
ts-relayer/src/services/: EventDeliverer.ts  EventGenerator.ts  ProofFetcher.ts  index.ts
ts-relayer/src/utils/: logger.ts
