[package]
name = "relayer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "relayer"
path = "src/main.rs"

[lib]
name = "relayer"
path = "src/lib.rs"

[dependencies]
ethers = "2.0.14"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.93"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json", "time"] }
base64 = "0.21.0"
thiserror = "2.0.12"
reqwest = "0.12.12"


